--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,10 @@ services:
     env_file:
       - ./environments/db.env
     volumes:
-      - db-data:/var/lib/mysql
+      - db-data:/var/lib/mysql  
+    ports:
+      - "3306:3306"    
+
   web:
     build:
       context: containers/nginx
