--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@
 
 # Ignore env
 /environments/db.env
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
