--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,13 @@ development:
   <<: *default
   database: webapp_development
 
+production:
+  <<: *default
+  host: <%= Rails.application.credentials.rds[:host] %>
+  database: <%= Rails.application.credentials.rds[:database] %>
+  username: <%= Rails.application.credentials.rds[:username] %>
+  password: <%= Rails.application.credentials.rds[:password] %>  
+
 test:
   <<: *default
   database: webapp_test
