--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,15 @@ jobs:
       # CircleCIに登録した秘密鍵を呼び出す。
       - add_ssh_keys: fodmap
       - run: ssh ${USER_NAME}@${HOST_NAME} 'docker-compose down'
+  build:
+    machine:
+      image: circleci/classic:edge    
   # テストが成功した場合のみ、deployを実行するようにします。
   workflows:
     version: 2
     build_and_deploy:
-      jobs:        
+      jobs:
+        - build       
         - deploy:                          
           # masterブランチがpushされた場合のみdeployするようにする。
           filters:
