--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,9 @@ jobs:
     steps:
       - checkout
       # CircleCIに登録した秘密鍵を呼び出す。
-      - add_ssh_keys: fodmap
+      - add_ssh_keys:
+        fingerprints:
+          - "32:8c:26:51:9b:4e:51:54:1a:a0:f8:29:09:62:92:dc"
       - run: ssh ${USER_NAME}@${HOST_NAME} 'docker-compose down'
   build:
     machine:
