--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,29 @@
 # circleCIのバージョン指定
 version: 2
 jobs:
-# EC2にSSH接続し、デプロイを実行
-  deploy:
-    machine:
-      image: circleci/classic:edge
-    steps:
-      - checkout
-      # CircleCIに登録した秘密鍵を呼び出す。
-      - add_ssh_keys:
-        fingerprints:
-          - "32:8c:26:51:9b:4e:51:54:1a:a0:f8:29:09:62:92:dc"
-      - run: ssh ${USER_NAME}@${HOST_NAME} 'docker-compose down'
   build:
-    machine:
-      image: circleci/classic:edge    
+    #...
+    deploy:
+      machine:
+        enabled: true
+      steps:
+        - add_ssh_keys:
+          fingerprints:
+            - "32:8c:26:51:9b:4e:51:54:1a:a0:f8:29:09:62:92:dc"
+        - run:
+          name: SSH 経由のデプロイ
+          command: |
+            ssh ${USER_NAME}@${HOST_NAME} 'docker-compose down'            
   # テストが成功した場合のみ、deployを実行するようにします。
-workflows:
-  version: 2
-  build_and_deploy:
-    jobs:
-      - build       
-      - deploy:                          
-        # masterブランチがpushされた場合のみdeployするようにする。
-        filters:
-          branches:
-            only: master
+  workflows:
+    version: 2
+    build-and-deploy:
+      jobs:
+  
+        - build
+        - deploy:
+            requires:
+              - build
+            filters:
+              branches:
+                only: master
