--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,51 @@
-# circleCIのバージョン指定
 version: 2
 jobs:
-# EC2にSSH接続し、デプロイを実行
-  deploy:
-    machine:
-      image: circleci/classic:edge
-    steps:
-      - checkout
-      # CircleCIに登録した秘密鍵を呼び出す。
-      - add_ssh_keys: fodmap
-      - run: ssh ${USER_NAME}@${HOST_NAME} 'docker-compose down'
   build:
-    machine:
-      image: circleci/classic:edge    
-  # テストが成功した場合のみ、deployを実行するようにします。
-workflows:
-  version: 2
-  build_and_deploy:
-    jobs:
-      - build       
-      - deploy:                          
-        # masterブランチがpushされた場合のみdeployするようにする。
-        filters:
-          branches:
-            only: master
+    docker:
+      - image: circleci/ruby:2.5.1-node-browsers
+        environment:
+          - BUNDLER_VERSION: 2.1.4
+          - RAILS_ENV: 'test'      
+      - image: circleci/mysql:5.7
+        environment:
+          - MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+          - MYSQL_ROOT_HOST: '%'
+    working_directory: ~/repo
+    steps:
+      - checkout      
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "Gemfile.lock" }}            
+            - v1-dependencies-
+      - run:
+          name: install dependencies
+          command: |            
+            gem install bundler -v 2.1.4
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+      - save_cache:
+          paths:
+            - ./vendor/bundle
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+      - run: mv config/database-ci.yml config/database.yml       
+      - run: bundle exec rake db:create
+      - run: bundle exec rake db:schema:load
+      - run:
+          name: Rubocop
+          command: bundle exec rubocop -a          
+      - run:
+          name: run tests
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
+              circleci tests split --split-by=timings)"
+            bundle exec rspec \
+              --format progress \
+              --format RspecJunitFormatter \
+              --out /tmp/test-results/rspec.xml \
+              --format progress \
+              $TEST_FILES      
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
