--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run: mv config/database-ci.yml config/database.yml       
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-      - run: bundle exec rake db:schema:load
+      - run: rubocop --auto-correct
       - run:
           name: Rubocop
           command: bundle exec rubocop -a          
